# Nebutra-Sailor

./: .czrc  .dockerignore  .env.example  .gitignore  .lintstagedrc.json  .npmrc  .prettierrc  .size-limit.json  .versionrc.json  ARCHITECTURE_CORRECTION.md  ARCHITECTURE_REVIEW.md  BRAND_GUIDELINES.md  CLAUDE.md  LICENSE  README.ja.md  README.ja.template.md  README.md  README.template.md  README.zh-CN.md  README.zh-CN.template.md  SECURITY.md  TRADEMARK.md  WARP.md  WHITELABEL.md  avatar-test.mdx  biome.json  brand.config.example.ts  check_missing_demos.js  commitlint.config.cjs  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  knip.json  lefthook.yml  lighthouserc.json  nebutra.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  (+7 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml  labeler.yml
.github/workflows/: chromatic.yml  ci.yml  codeql.yml  dependabot-automerge.yml  dependency-review.yml  deploy.yml  docker-build-push.yml  labeler.yml  lighthouse-dashboard.yml  load-test.yml  release.yml  security-scan.yml  stale.yml  ui-governance.yml
.husky/: post-merge  pre-push
apps/api-gateway/: .dockerignore  .env.example  .redocly.lint-ignore.yaml  Dockerfile  package.json  redocly.yaml  tsconfig.json  vercel.json  vitest.config.ts
apps/design-docs/: CONTRIBUTING.md  fix-accordion.js  heroui-plugin.ts  inspect-page.ts  mdx-components.tsx  next.config.ts  openapi.json  package.json  source.config.ts  tsconfig.json
apps/docs/: changelog.mdx  introduction.mdx  mint.json  package.json
apps/docs-hub/: how-to-use.mdx  introduction.mdx  mint.json  package.json
apps/idp/: next.config.ts  package.json
apps/landing-page/: DESIGN.md  Dockerfile  README.md  eslint.config.mjs  hero.ts  i18n.json  lint_output.txt  next.config.ts  package.json  tsconfig.json  vercel.json
apps/storybook/: CHROMATIC.md  package.json  tsconfig.json
apps/studio/: package.json  sanity.cli.ts  sanity.config.ts  tsconfig.json  vercel.json
apps/tseka-dev/: next.config.ts  package.json  tsconfig.json  vercel.json
apps/tsekaluk-dev/: .env.example  .gitignore  ENV_SETUP.md  next.config.ts  package.json  prisma.config.ts  source.config.ts  test.css  test.html  vercel.json
apps/web/: .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package.json  sentry.client.config.ts  tsconfig.json  vercel.json  vitest.config.ts
changelog/: CHANGELOG.md  README.md
changelog/releases/: .gitkeep  TEMPLATE.md
docs/: COMPONENT-LIBRARY-POLICY.md  DOMAINS.md  INDEX.md  MARKETING-INFRASTRUCTURE.md  TYPOGRAPHY.md  UI-GUIDELINES.md  brand-vi-manual.html
docs/plans/: 2026-02-28-api-gateway-proxy-design.md  2026-02-28-api-gateway-proxy.md  2026-02-28-auth-onboarding-design.md  2026-02-28-auth-onboarding-impl.md  2026-02-28-best-practices-fixes.md  2026-02-28-best-practices-round2.md  2026-02-28-design-system-geist-quality.md  2026-02-28-design-system-implementation-plan.md  2026-02-28-docs-hub-design.md  2026-02-28-docs-hub-implementation.md  2026-02-28-observability-testing-cors-design.md  2026-02-28-observability-testing-cors-impl.md  2026-03-01-auth-flow-e2e-design.md  2026-03-01-auth-flow-e2e-impl.md  2026-03-01-superstarter-unicorn-architecture-design.md  2026-03-01-superstarter-unicorn-architecture-impl.md  2026-03-02-multi-scenario-template-design.md  2026-03-02-preset-theme-engine-impl.md  2026-03-03-fumadocs-design-system-migration.md  2026-03-03-ui-ux-architecture-audit-remediation-design.md  2026-03-05-100-point-architecture-design.md  2026-03-09-tseka-dev-design.md  2026-03-09-tseka-dev-implementation.md  2026-03-10-portfolio-deep-dive-design.md  2026-03-10-portfolio-deep-dive-impl.md
docs/reports/: 2026-03-05-dependency-syntax-peer-audit.md
e2e/: auth.spec.ts  dashboard.spec.ts  landing.spec.ts
governance/: ui-governance.current.json  ui-governance.v1.json
governance/schemas/: ui-governance.schema.json
infra/: README.md
infra/clickhouse/: README.md
infra/cloudflare/: README.md  wrangler.toml
infra/database/: README.md
infra/docker/: Dockerfile.python  README.md
infra/inngest/: README.md  auto_translate.ts  client.ts  daily_digest_email.ts  db_backup.ts  ecommerce_sync.ts  index.ts  producthunt_sync.ts  recsys_refresh.ts
infra/k8s/: README.md
infra/n8n/: .env.example  README.md  (+2 more)
patches/: @clerk__nextjs@7.0.1.patch
scripts/: add-missing-code.py  brand-apply.ts  brand-init.ts  brand-types.ts  check-anomalies.py  check-demos.py  check-previews.py  codemod-tokens.ts  export-openapi.mjs  fix-datepicker.py  fix-mdx-previews.py  generate-api-types.ts  generate-palette.mjs  scrub-radix-docs.py  sync-lang.mjs  test-mdx.py  validate-ui-governance-policy.ts  vercel-ignore-build.sh  verify-brand-token-sync.ts  verify-ui-governance.ts
services/ai/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
services/ai/app/: main.py
services/ai/app/api/v1/: routes_embed.py  routes_generate.py  routes_translate.py
services/ai/providers/: __init__.py  base.py  factory.py  openai_provider.py  openrouter.py  siliconflow.py
services/ai/services/: embedding_service.py  llm_service.py  translate_service.py
services/ai/tests/: conftest.py  test_embed.py  test_generate.py  test_health.py
services/billing/: .env.example  pyproject.toml  requirements.txt
services/billing/app/: __init__.py  config.py  main.py
services/billing/app/api/v1/: __init__.py  routes_billing.py  routes_credits.py  routes_subscriptions.py  routes_usage.py  routes_webhooks.py
services/billing/services/: __init__.py  credits_service.py  plan_config_service.py  stripe_service.py  subscription_service.py  usage_service.py  webhook_service.py
services/billing/utils/: __init__.py  redis_client.py  supabase_client.py
services/event-ingest/: .env.example  README.md  pyproject.toml  requirements.txt
services/event-ingest/app/: main.py
services/recsys/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/recsys/app/: main.py
services/recsys/app/api/v1/: routes_recsys.py
tools/: component-audit.ts
(+1995 files in other folders)
