[project]
name = "nebutra-billing-service"
version = "0.1.0"
description = "Nebutra Billing microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "stripe>=11.0.0",
    "supabase>=2.10.0",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "httpx>=0.26,<0.28",
    "python-dotenv>=1.0.1",
    "python-dateutil>=2.9.0",
    "structlog>=24.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",  # assert statements OK in tests
    "S603",  # subprocess call — needed for service scripts
    "S607",  # partial executable path OK
    "B008",  # FastAPI Depends() as default argument is idiomatic
    "S104",  # 0.0.0.0 binding is intentional in containerized services
]

[tool.ruff.lint.isort]
known-first-party = ["_shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
