[project]
name = "nebutra-event-ingest-service"
version = "0.1.0"
description = "Nebutra Event Ingest microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "clickhouse-connect>=0.7.16",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",  # assert statements OK in tests
    "S603",  # subprocess call — needed for service scripts
    "S607",  # partial executable path OK
]

[tool.ruff.lint.isort]
known-first-party = ["_shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
